# opencv

./: .gitignore  README.md
LearningOpenCV/: CMakeLists.txt  LearningOpenCV.sln
LearningOpenCV/LearningOpenCV/: C1_1_DisplayPicture.cpp  C1_1_DisplayPicture.h  C1_2_DisplayVideo.cpp  C1_2_DisplayVideo.h  C1_3_MovingAround.cpp  C1_3_MovingAround.h  C1_4_SimpleTransformation.cpp  C1_4_SimpleTransformation.h  C1_5_PyramidDown.cpp  C1_5_PyramidDown.h  C1_6_EdgeDetector.cpp  C1_6_EdgeDetector.h  C1_7_PixelColor.cpp  C1_7_PixelColor.h  C1_8_CameraInput.cpp  C1_8_CameraInput.h  ConsoleMenu.cpp  ConsoleMenu.h  ConsoleMenuConfig.h  LearningOpenCV.vcxproj  LearningOpenCV.vcxproj.filters  Main.cpp
